--- a/templete/index.html
+++ b/templete/index.html
@@ -9,10 +9,11 @@
         <meta name="description" content="description here" />
         <meta name="author" content="RudRecciah" />
         <!-- Favicon and title -->
-        <link rel="icon" href="path/to/fav.png">
+        <link rel="icon" href="./ico.png">
         <title>Templete</title>
         <!-- CSS -->
         <link href="https://cdn.jsdelivr.net/npm/halfmoon@1.1.1/css/halfmoon-variables.min.css" rel="stylesheet" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@animxyz/core@0.4.0/dist/animxyz.min.css">
         <link href="./style.css" rel="stylesheet" />
     </head>
     <body class="with-custom-webkit-scrollbars with-custom-css-scrollbars dark-mode" data-dm-shortcut-enabled="true" data-sidebar-shortcut-enabled="true">
@@ -22,8 +23,8 @@
 
             </div>
             <nav class="navbar">
-                <div class="navbar-content">
-                    <button class="btn btn-action btn-link" type="button" onclick="halfmoon.toggleSidebar()">
+                <div class="navbar-content" xyz="fade big">
+                    <button class="xyz-in btn btn-action btn-link" type="button" onclick="halfmoon.toggleSidebar()">
                         <i class="fa fa-bars text-white" aria-hidden="true">
                         </i>
                     </button>
@@ -40,5 +41,41 @@
         <!-- Halfmoon JS -->
         <script src="https://cdn.jsdelivr.net/npm/halfmoon@1.1.1/js/halfmoon.min.js"></script>
         <script src="https://kit.fontawesome.com/d1e8146998.js" crossorigin="anonymous"></script>
+        <script>
+            window.onload = animate();
+
+            document.getElementById("wrapper").addEventListener("scroll", function() {
+                animate();
+            });
+
+            function animate() {
+                var elements = [/*array of elements to animate found by their id*/];
+                elements.forEach(element => {
+                    var distance = element.getBoundingClientRect();
+                    if(distance.top <= (window.innerHeight || document.documentElement.clientHeight)) {
+                        if(!(document.getElementById(element.getAttribute("id")).classList.contains("xyz-in"))) {
+                            document.getElementById(element.getAttribute("id")).classList.add("xyz-in");
+                        }
+                    }
+                });
+            }
+        </script>
     </body>
+    <!--
+        Animations:
+            Landing Image/Content, Footer:
+                xyz="fade big"
+            Headers:
+                xyz="fade small stagger ease-out-back"
+            Content:
+                xyz="fade flip-down stagger duration-10 delay-2 ease-out-back"
+            Images, Buttons, Other Containers:
+                xyz="fade flip-down stagger duration-10 delay-2 ease-out-back"
+            Card Groups:
+                xyz="fade-100% back big-25% perspective duration-4 ease stagger-0.5"
+            Singe Cards:
+                xyz="fade-100% back big-25% perspective duration-4 ease"
+            Card Buttons:
+                xyz="left-50% fade ease"
+    -->
 </html>
