oops missed a spot

--- a/templete/index.html
+++ b/templete/index.html
@@ -15,6 +15,11 @@
         <link href="https://cdn.jsdelivr.net/npm/halfmoon@1.1.1/css/halfmoon-variables.min.css" rel="stylesheet" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@animxyz/core@0.4.0/dist/animxyz.min.css">
         <link href="./style.css" rel="stylesheet" />
+        <style>
+            .page-wrapper {
+                overflow-x: hidden;
+            }
+        </style>
     </head>
     <body class="with-custom-webkit-scrollbars with-custom-css-scrollbars dark-mode" data-dm-shortcut-enabled="true" data-sidebar-shortcut-enabled="true">
         <!-- Modals go here -->
