some cool things

--- a/templete/index.html
+++ b/templete/index.html
@@ -22,11 +22,11 @@
         </style>
     </head>
     <body class="with-custom-webkit-scrollbars with-custom-css-scrollbars dark-mode" data-dm-shortcut-enabled="true" data-sidebar-shortcut-enabled="true">
-        <!-- Modals go here -->
+        <!-- Modals -->
         <div class="page-wrapper with-navbar with-sidebar" data-sidebar-type="overlayed-all">
-            <div class="sticky-alerts">
-
-            </div>
+            <!-- Toasts -->
+            <div class="sticky-alerts"></div>
+            <!-- Navigation -->
             <nav class="navbar">
                 <div class="navbar-content" xyz="fade big">
                     <button class="xyz-in btn btn-action btn-link" type="button" onclick="halfmoon.toggleSidebar()">
@@ -37,13 +37,13 @@
             </nav>
             <div class="sidebar-overlay" onclick="halfmoon.toggleSidebar()"></div>
             <div class="sidebar">
-                <!-- Sidebar Navigation -->
+                <!-- Sidebar -->
             </div>
             <div class="content-wrapper">
 
             </div>
         </div>
-        <!-- Halfmoon JS -->
+        <!-- Scripts -->
         <script src="https://cdn.jsdelivr.net/npm/halfmoon@1.1.1/js/halfmoon.min.js"></script>
         <script src="https://kit.fontawesome.com/d1e8146998.js" crossorigin="anonymous"></script>
         <script>
