--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
         <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport" />
-        <meta name="keywords" content="rudrecciah, endcraft, freebird games, rud recciah, rud, recciah" />
+        <meta name="keywords" content="rudrecciah, endcraft, freebird games, rud recciah, rud, recciah, developer, to the moon wiki, to the moon, finding paradise, theory, theory wiki, to the moon theory wiki, ttm theory wiki, ttm wiki, freebird arena, custom query stats, spigotmc, spigot, killed kan gao in among us" />
         <meta name="description" content="Home of the squacky boi." />
         <meta name="author" content="RudRecciah" />
         <!-- Favicon and title -->
@@ -17,8 +17,9 @@
         <link href="./style.css" rel="stylesheet" />
     </head>
     <body class="with-custom-webkit-scrollbars with-custom-css-scrollbars dark-mode rud-nomargin    " data-dm-shortcut-enabled="true" data-sidebar-shortcut-enabled="true">
-        <!-- Modals go here -->
+        <!-- Modals -->
         <div class="page-wrapper with-navbar with-sidebar" data-sidebar-type="overlayed-all">
+            <!-- Navigation -->
             <nav class="navbar" xyz="fade big">
                 <div class="navbar-content rud-width-fluid rud-height-fluid xyz-in">
                     <button class="btn btn-action btn-link" type="button" onclick="halfmoon.toggleSidebar()">
@@ -33,9 +34,7 @@
                     </a>
                 </div>
             </nav>
-
-
-
+            <!-- Sidebar -->
             <div class="sidebar-overlay" onclick="halfmoon.toggleSidebar()"></div>
             <div class="sidebar">
                 <div class="sidebar-menu">
@@ -86,9 +85,7 @@
                     </div>
                 </div>
             </div>
-
-
-
+            <!-- Content -->
             <div id="wrapper" class="content-wrapper">
                 <div class="container-fluid" xyz="fade big">
                     <img src="landing-bg-img.png" class="img-fluid rud-img-width-fluid xyz-in" alt="image did a not exist sorry :/">
@@ -227,7 +224,7 @@
                 </div>
             </div>
         </div>
-        <!-- Halfmoon JS -->
+        <!-- Scripts -->
         <script src="https://cdn.jsdelivr.net/npm/halfmoon@1.1.1/js/halfmoon.min.js"></script>
         <script src="https://kit.fontawesome.com/d1e8146998.js" crossorigin="anonymous"></script>
         <script>
