is 3 am and it took me 2 hours to add a video

--- a/index.html
+++ b/index.html
@@ -88,9 +88,13 @@
             <!-- Content -->
             <div id="wrapper" class="content-wrapper">
                 <div class="container-fluid" xyz="fade big">
-                    <img src="landing-bg-img.png" class="img-fluid rud-img-width-fluid xyz-in" alt="image did a not exist sorry :/">
-                </div>
-                <div class="content">
+                    <video autoplay loop muted class="w-full">
+                        <source src="lofi.mp4" type="video/mp4">
+                    </video>
+                    <!-- <img src="landing-bg-img.png" class="img-fluid rud-img-width-fluid xyz-in" alt="image did a not exist sorry :/"> -->
+                </video>
+                <div class="rud-spacer-md"></div>
+                <div class="content content-main">
                     <div xyz="fade small stagger ease-out-back">
                         <h1 id="about-title" class="content-title text-center font-size-24">
                             Hey
