changed indent to 2 and move fbs script to old

--- a/templete/redirect.html
+++ b/templete/redirect.html
@@ -5,7 +5,7 @@
       Redirecting...
     </title>
     <script>
-      window.location.href = "https://github.com/RudRecciah/open-source-endcraft-archive";
+      window.location.href = "";
     </script>
   </head>
 </html>
